# xdemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  xdemo_main.cc
cmake/: cpplint.cmake  lcov.cmake
docs/: CMakeLists.txt
include/xdemo/: xdemo.h
src/: CMakeLists.txt  xdemo_a.cc  xdemo_b.cc
tests/: CMakeLists.txt  test_helper.cc  test_helper.h  xdemo_test.cc
